Fix gap property

--- a/frontend_react/src/components/credentials/Credentials.scss
+++ b/frontend_react/src/components/credentials/Credentials.scss
@@ -102,13 +102,19 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        gap:4vw;
 
         @media screen and (max-width:600px) {
             flex-direction: column;
-            gap: 7vw;
         }
 
+        &--panel:not(:last-child) {
+            margin-bottom: 4vw;
+
+            @media screen and (max-width:450px) {
+                margin-bottom: 6vw;
+            }
+        }
+        
         &--panel {
             display: flex;
             align-items: flex-start;
